monoHiggs: 2HDM in
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@130 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -11,7 +11,7 @@
 {$LastChangedDate$}
 {$LastChangedRevision$}
 {$LastChangedBy$}
-\svnid{$Id$}
+\svnid{$Id: doc.tex 128 2015-05-13 04:23:43Z mrenna $}
 \usepackage{graphicx}
 \usepackage[svgnames]{xcolor}
 \usepackage{hyperref}
