--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -35,3 +35,83 @@ There is one possible UV-model to obtain a zero value for $c_6$ and non-zero val
 \end{equation}
 %
 and order of unity. 
+
+\section{Tabulated cross-sections}
+
+\subsection{Higgs+MET signal from 2HDM model with a Z' and a new pseudoscalar}
+\label{subsec:Simulation}
+
+The leading order cross-sections from the Madgraph generator for the signal samples are listed in Tables~\ref{tab:SigSamplesZpA0}, ~ \ref{tab:SigSamplesZpDM}, ~ \ref{tab:SigSamplesZpZh}, for the various scan points recommended.  
+
+\begin{table}
+	\centering
+	\small
+	\begin{tabular}{|c|c|c|}
+		\hline
+		$M_{Z'}$ (GeV) & $M_{A^0}(GeV)$ & $\sigma$ [pb] \\ \hline \hline
+		600 & 300 & 1.55E-01  \\
+		600 & 400 & 2.18E-02  \\
+		800 & 300 & 8.30E-02  \\
+		800 & 400 & 2.72E-02  \\
+		800 & 500 & 1.09E-02  \\
+		800 & 600 & 2.98E-03  \\
+		1000 & 300 & 3.74E-02  \\
+		1000 & 400 & 1.53E-02  \\
+		1000 & 500 & 8.91E-03  \\
+		1000 & 600 & 4.89E-03  \\
+		1000 & 700 & 2.21E-03  \\
+		1000 & 800 & 7.05E-04  \\
+		1200 & 300 & 1.70E-02  \\
+		1200 & 400 & 7.65E-03  \\
+		1200 & 500 & 5.14E-03  \\
+		1200 & 600 & 3.52E-03  \\
+		1200 & 700 & 2.25E-03  \\
+		1200 & 800 & 1.27E-03  \\
+		1400 & 300 & 8.00E-03  \\
+		1400 & 400 & 3.79E-03  \\
+		1400 & 500 & 2.75E-03  \\
+		1400 & 600 & 2.09E-03  \\
+		1400 & 700 & 1.58E-03  \\
+		1400 & 800 & 1.06E-03  \\
+		\hline
+		\hline
+	\end{tabular}
+	\caption{LO cross-sections for $Z' \to A^0h$ samples, varying $M_{Z'}$ and $M_{A^0}$, keeping the DM mass fixed to 100 GeV. 
+    The columns from left to right describe $M_{Z'}$, $M_{A^0}$ and the sample cross section in pb.}
+   \label{tab:SigSamplesZpA0}
+\end{table}
+
+\begin{table}
+	\centering
+	\small
+	\begin{tabular}{|c|c|c|c|}
+		\hline
+		$M_{Z'}$ (GeV) & $M_{A^0}(GeV)$ & $M_{DM} (GeV)$ & $\sigma$ [pb] \\ \hline \hline
+		1000 & 300 & 10 & 3.76E-02  \\
+		1000 & 300 & 50 & 3.75E-02  \\
+		1200 & 600 & 10 & 3.64E-03  \\
+		1200 & 600 & 20 & 3.07E-03  \\
+		\hline
+		\hline
+	\end{tabular}
+	\caption{LO cross-sections for $Z' \to A^0h$ samples, when varying $M_{DM}$. The columns from left to right describe $M_{Z'}$, $M_{A^0}$, $M_{DM}$, and the sample cross section in pb.}
+	\label{tab:SigSamplesZpDM}
+\end{table}
+
+\begin{table}
+	\centering
+	\small
+	\begin{tabular}{|c|c|}
+		\hline
+		$M_{Z'}$ (GeV) & $\sigma$ [pb] \\ \hline \hline
+		600 & 1.15E-01  \\
+		800 & 3.21E-02  \\
+		1000 & 1.13E-02  \\
+		1200 & 4.54E-03  \\
+		1400 & 2.00E-03  \\
+		\hline
+		\hline
+	\end{tabular}
+	\caption{LO cross-sections for $Z' \to Zh$ exclusive samples, varying $M_{Z'}$. The columns from left to right describe $M_{Z'}$ and the sample cross section in pb.}
+	\label{tab:SigSamplesZpZh}
+\end{table}
