--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -38,6 +38,22 @@ and order of unity.
 
 \section{Tabulated cross-sections}
 
+\subsection{Higgs+MET signal, vector mediator model}
+
+%TODO: this should be tabulated
+
+\begin{figure}[hbpt!]
+	\begin{center}
+		\includegraphics[width=0.9\linewidth]{figures/EW/monoH/zprime_cross_section_new}
+		\caption{ Cross section of the $pp \rightarrow H\chi\bar{\chi}$ process 
+			in units of pico-barn for the vector mediator model. 
+			\label{fig:zprimeXS}}
+	\end{center}
+\end{figure}
+
+Figure~\ref{fig:zprimeXS} shows the cross sections in this mediator model in the $m_{med}$ 
+vs $m_{DM}$ plane..
+
 \subsection{Higgs+MET signal from 2HDM model with a Z' and a new pseudoscalar}
 \label{subsec:Simulation}
 
