monoH diagrams and typo in mono-jet diagram
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@134 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -47,7 +47,7 @@
     \fmflabel{\Large ${\bar{q}}$}{i1}
     \fmflabel{\Large ${q}$}{i2}
     \fmflabel{\Large ${\bar{\chi}(m_{DM})}$}{o1}
-    \fmflabel{\Large ${\chi(M_{DM})}$}{o2}
+    \fmflabel{\Large ${\chi(m_{DM})}$}{o2}
     \fmf{gluon,tension=0}{visr,isr}
     \fmf{phantom,tension=0}{pvisr,pisr}
     \fmflabel{\Large ${g}$}{isr}
